<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/albumCellLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:padding="16dp">

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="@dimen/album_cover_width"
            android:layout_height="@dimen/album_cover_heigth"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            tools:src="@tools:sample/avatars"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/albumCover">

            <TextView
                android:id="@+id/albumTitle"
                style="@style/customTextViewsBold"
                android:text="@string/example_album_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/albumArtist"
                style="@style/customTextViewsLight"
                android:text="@string/example_artist"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>