<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/nowPlayingLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.moku.davide.spotify_side_project.NowPlayingFragment">

    <!-- TOP LAYOUT -->
    <RelativeLayout
        android:id="@+id/nowPlayingTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- CLOSE -->
        <ImageButton
            android:id="@+id/nowPlayingCloseButton"
            android:layout_width="@dimen/small_player_button_width"
            android:layout_height="@dimen/small_player_button_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />

        <!-- Now Playing text -->
        <TextView
            android:id="@+id/nowPlayingText"
            style="@style/customTextViewsBold"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/now_playing"
            android:textSize="14sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <!-- ARTWORKS SLIDER -->
    <!-- TODO proviamo https://github.com/Devlight/InfiniteCycleViewPager-->

    <!-- CURRENT TRACK INFO LAYOUT -->
    <LinearLayout
        android:id="@+id/nowPlayingCurrentTrackInfoLayout"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingPlayerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nowPlayingCurrentTrackTV"
            style="@style/customTextViewsBold"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/example_track_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nowPlayingCurrentTrackArtistTV"
            style="@style/customTextViewsLight"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/example_artist"
            android:textSize="12sp" />

    </LinearLayout>

    <!-- SEEKBAR LAYOUT -->
    <!-- TODO currentSeconds, seekBar con indicatore, trackDurationInSeconds-->

    <!-- PLAYER LAYOUT -->
    <RelativeLayout
        android:id="@+id/nowPlayingPlayerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="@dimen/big_player_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- PREV -->
        <ImageButton
            android:id="@+id/nowPlayingPrevButton"
            android:layout_width="@dimen/big_player_nav_button_width"
            android:layout_height="@dimen/big_player_nav_button_height"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/nowPlayingPlayButton"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_skip_previous_black_24dp" />

        <!-- PLAY -->
        <ImageButton
            android:id="@+id/nowPlayingPlayButton"
            android:layout_width="@dimen/big_player_play_button_width"
            android:layout_height="@dimen/big_player_play_button_height"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/big_player_play_button_side_margin"
            android:layout_marginStart="@dimen/big_player_play_button_side_margin"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_play_circle" />

        <!-- NEXT -->
        <ImageButton
            android:id="@+id/nowPlayingNextButton"
            android:layout_width="@dimen/big_player_nav_button_width"
            android:layout_height="@dimen/big_player_nav_button_height"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/nowPlayingPlayButton"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_skip_next_black_24dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
