<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.moku.davide.spotify_side_project.MainActivity">

    <RelativeLayout
        android:id="@+id/homepageTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.glomadrian.grav.GravView
            android:id="@+id/grav"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
            app:array_colors="@array/red"
            app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
            app:regular_cell_size="150"
            app:regular_variance="100"
            app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
            app:ball_size_from_size="3dp"
            app:ball_size_to_size="6dp"
            app:animationGenerators="@array/path"
            app:path_variance_from="-10dp"
            app:path_variance_to="12dp"
            app:path="@string/circle"
            app:path_original_width="@integer/circle_original_width"
            app:path_original_height="@integer/circle_original_height"
            app:path_min_duration="5000"
            app:path_max_duration="6000"
            />

        <TextView
            style="@style/homepage_title"
            android:id="@+id/fake_title"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:text="@string/homepage_title" />

        <!--<com.hanks.htextview.fade.FadeTextView
            style="@style/homepage_title"
            android:id="@+id/homepageTitle"
            android:layout_centerVertical="true"
            android:layout_alignStart="@id/fake_title"
            app:animationDuration="1500"/>

        <com.hanks.htextview.fade.FadeTextView
            style="@style/homepage_title"
            android:id="@+id/homepageTitle2"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/homepageTitle"
            app:animationDuration="2000"/>-->

        <com.hanks.htextview.typer.TyperTextView
            style="@style/homepage_title"
            android:id="@+id/homepageTitle"
            android:layout_centerVertical="true"
            android:layout_alignStart="@id/fake_title"
            app:charIncrease="1"
            app:typerSpeed="180"/>

        <com.hanks.htextview.typer.TyperTextView
            style="@style/homepage_title"
            android:id="@+id/homepageTitle2"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/homepageTitle"
            app:charIncrease="1"
            app:typerSpeed="180"/>

    </RelativeLayout>

    <View android:id="@+id/line"
        style="@style/line"
        app:layout_constraintTop_toBottomOf="@id/homepageTitleLayout"
        app:layout_constraintBottom_toTopOf="@id/savedTracksRV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/savedTracksRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="50" />

    <View android:id="@+id/line2"
        style="@style/line"
        app:layout_constraintTop_toBottomOf="@id/savedTracksRV"
        app:layout_constraintBottom_toTopOf="@id/playerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/playerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp">

        <!-- PREV -->
        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="@dimen/player_nav_button_width"
            android:layout_height="@dimen/player_nav_button_height"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/playButton"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_skip_previous_black_24dp" />

        <!-- PLAY -->
        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="@dimen/player_play_button_width"
            android:layout_height="@dimen/player_play_button_height"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_play_circle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <!-- NEXT -->
        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="@dimen/player_nav_button_width"
            android:layout_height="@dimen/player_nav_button_height"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/playButton"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_skip_next_black_24dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
